--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,213 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Quickstart Guide'
+description: 'Get started with the Tuesday Public APIs in under 5 minutes'
 ---
 
-## Setup your development
+## Get Your API Key
 
-Learn how to update your docs locally and deploy them to the public.
+To get started with the Tuesday Public APIs, you'll need an API key:
 
-### Edit and preview
+<Steps>
+  <Step title="Sign Up">
+    Create an account at [Tuesday Dashboard](https://app.tuesday.so)
+  </Step>
+  <Step title="Generate API Key">
+    Navigate to the API Keys section and generate a new key
+  </Step>
+  <Step title="Secure Your Key">
+    Store your API key securely - treat it like a password
+  </Step>
+</Steps>
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
+<Warning>
+  Never expose your API key in client-side code or public repositories. Always use environment variables or secure key management systems.
+</Warning>
 
+## Test Your Setup
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
+Verify your API key works by making a test request to the Auth API:
 
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
-  </Accordion>
-</AccordionGroup>
+<CodeGroup>
+```bash cURL
+curl --location 'https://api.tuesday.so/api/v1/public/auth' \
+--header 'X-API-KEY: your-api-key-here'
+```
 
-### Deploy your changes
+```javascript JavaScript
+const response = await fetch('https://api.tuesday.so/api/v1/public/auth', {
+  headers: {
+    'X-API-KEY': 'your-api-key-here'
+  }
+});
 
-<AccordionGroup>
+const data = await response.json();
+console.log(data);
+```
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+```python Python
+import requests
 
-</AccordionGroup>
+headers = {
+    'X-API-KEY': 'your-api-key-here'
+}
 
-## Update your docs
+response = requests.get(
+    'https://api.tuesday.so/api/v1/public/auth',
+    headers=headers
+)
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+print(response.json())
+```
 
-<CardGroup>
+```php PHP
+<?php
+$ch = curl_init();
 
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
+curl_setopt($ch, CURLOPT_URL, 'https://api.tuesday.so/api/v1/public/auth');
+curl_setopt($ch, CURLOPT_RETURNTRANSFER, true);
+curl_setopt($ch, CURLOPT_HTTPHEADER, [
+    'X-API-KEY: your-api-key-here'
+]);
 
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
+$response = curl_exec($ch);
+curl_close($ch);
 
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
+$data = json_decode($response, true);
+print_r($data);
+?>
+```
+</CodeGroup>
 
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
+**Expected Response:**
+```json
+{
+    "data": {
+        "name": "Your Workspace",
+        "id": "ws30ngrb03luqxcl27",
+        "user_id": "usr19g6tln8rlii8"
+    },
+    "statusCode": 200,
+    "message": "Success"
+}
+```
 
+## Your First API Call
+
+Let's fetch a person's profile using their LinkedIn URL:
+
+<CodeGroup>
+```bash cURL
+curl --location 'https://api.tuesday.so/api/v1/people/profile?linkedin_url=https://www.linkedin.com/in/david-addiss-4725189' \
+--header 'X-API-KEY: your-api-key-here'
+```
+
+```javascript JavaScript
+const response = await fetch(
+  'https://api.tuesday.so/api/v1/people/profile?linkedin_url=https://www.linkedin.com/in/david-addiss-4725189',
+  {
+    headers: {
+      'X-API-KEY': 'your-api-key-here'
+    }
+  }
+);
+
+const profile = await response.json();
+console.log(profile);
+```
+
+```python Python
+import requests
+
+url = "https://api.tuesday.so/api/v1/people/profile"
+params = {
+    "linkedin_url": "https://www.linkedin.com/in/david-addiss-4725189"
+}
+headers = {
+    "X-API-KEY": "your-api-key-here"
+}
+
+response = requests.get(url, params=params, headers=headers)
+profile = response.json()
+print(profile)
+```
+</CodeGroup>
+
+**Response:**
+```json
+{
+    "data": {
+        "name": "David Addiss",
+        "first_name": "David",
+        "last_name": "Addiss",
+        "title": "Energy Consultant",
+        "city": "St Petersburg",
+        "state": "Florida",
+        "country": "United States",
+        "linkedin_url": "https://www.linkedin.com/in/david-addiss-4725189",
+        "organizations.name": "Semper Solaris",
+        "organizations.website_url": "https://www.sempersolaris.com"
+    },
+    "statusCode": 200,
+    "message": "Success"
+}
+```
+
+## Common Use Cases
+
+<CardGroup cols={2}>
+  <Card title="CRM Enrichment" icon="database">
+    Enrich your existing contacts with additional profile data and verified contact information.
+  </Card>
+  
+  <Card title="Lead Generation" icon="target">
+    Find and qualify new prospects using company and people search APIs.
+  </Card>
+  
+  <Card title="Sales Intelligence" icon="chart-line">
+    Research prospects and companies before outreach with detailed profiles and insights.
+  </Card>
+  
+  <Card title="Market Research" icon="magnifying-glass">
+    Analyze companies and their employees to understand market trends and opportunities.
+  </Card>
+</CardGroup>
+
+## Best Practices
+
+<Tip>
+  **Start Small**: Begin with basic profile lookups before moving to advanced search queries
+</Tip>
+
+<Tip>
+  **Batch Requests**: For multiple profiles, consider the rate limits and plan your requests accordingly
+</Tip>
+
+<Tip>
+  **Cache Results**: Store frequently accessed data to reduce API calls and improve performance
+</Tip>
+
+<Tip>
+  **Error Handling**: Always implement proper error handling for API timeouts and rate limits
+</Tip>
+
+## Next Steps
+
+Now that you're set up, explore these key areas:
+
+- [Authentication](/authentication) - Learn about API key management
+- [Rate Limits & Credits](/rate-limits-and-credits) - Understand usage limits
+- [People APIs](/api-reference/people/profile) - Access professional profiles
+- [Company APIs](/api-reference/company/profile) - Get company intelligence
+- [Search APIs](/api-reference/people/search) - Find prospects at scale
+
+## Need Help?
+
+<CardGroup cols={2}>
+  <Card title="API Reference" icon="code" href="/api-reference/auth/check-api-key">
+    Complete API documentation with examples
+  </Card>
+  
+  <Card title="Support" icon="envelope" href="mailto:support@tuesday.so">
+    Get help from our technical team
+  </Card>
 </CardGroup>
