Update documentation to reflect the rebranding from Tuesday Public APIs to Tuesday Leads API, including changes to titles, descriptions, and references across multiple files.

--- a/authentication.mdx
+++ b/authentication.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'Authentication'
-description: 'Learn how to authenticate your requests to the Tuesday Public APIs'
+description: 'Learn how to authenticate your requests to the Tuesday Leads API'
 icon: 'key'
 ---
 
 ## Overview
 
-All requests to the Tuesday Public APIs must be authenticated using your unique API key. Authentication is handled through HTTP headers, making it simple to integrate into any application or programming language.
+All requests to the Tuesday Leads API must be authenticated using your unique API key. Authentication is handled through HTTP headers, making it simple to integrate into any application or programming language.
 
 ## API Key Authentication
 
