--- a/errors.mdx
+++ b/errors.mdx
@@ -6,7 +6,7 @@ icon: 'triangle-exclamation'
 
 ## Overview
 
-The Tuesday Public APIs use standard HTTP status codes to indicate the success or failure of API requests. When an error occurs, the response will include a structured error message to help you understand and resolve the issue.
+The Tuesday Leads API use standard HTTP status codes to indicate the success or failure of API requests. When an error occurs, the response will include a structured error message to help you understand and resolve the issue.
 
 ## Error Response Format
 
