--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Tuesday Public APIs'
+title: 'Tuesday Leads API'
 description: 'Programmatically access enriched company and professional profiles using LinkedIn URLs and related attributes'
 ---
 
 ## Overview
 
-The Tuesday Public APIs allow you to programmatically access enriched company and professional profiles using LinkedIn URLs and related attributes. Whether you're building B2B tools, enriching CRM data, or doing sales outreach automation, this API is designed to fit right into your workflows.
+The Tuesday Leads API allow you to programmatically access enriched company and professional profiles using LinkedIn URLs and related attributes. Whether you're building B2B tools, enriching CRM data, or doing sales outreach automation, this API is designed to fit right into your workflows.
 
 <CardGroup cols={2}>
   <Card
