--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Quickstart Guide'
-description: 'Get started with the Tuesday Public APIs in under 5 minutes'
+description: 'Get started with the Tuesday Leads API in under 5 minutes'
 ---
 
 ## Get Your API Key
 
-To get started with the Tuesday Public APIs, you'll need an API key:
+To get started with the Tuesday Leads API, you'll need an API key:
 
 <Steps>
   <Step title="Sign Up">
