--- a/rate-limits-and-credits.mdx
+++ b/rate-limits-and-credits.mdx
@@ -6,7 +6,7 @@ icon: 'gauge'
 
 ## Rate Limiting
 
-The Tuesday Public APIs implement rate limiting to ensure fair usage and maintain service quality for all users.
+The Tuesday Leads API implement rate limiting to ensure fair usage and maintain service quality for all users.
 
 ### Rate Limit Details
 
