Update README and API documentation to reflect changes in API key retrieval link and enhance icon representations for various use cases across company and people endpoints.

--- a/api-reference/company/employee-count.mdx
+++ b/api-reference/company/employee-count.mdx
@@ -431,11 +431,11 @@ Employee count and metrics require specialized data processing and analytics, re
     Identify rapidly growing companies and departments for talent sourcing
   </Card>
   
-  <Card title="Sales Intelligence" icon="target">
+  <Card title="Sales Intelligence" icon="chart-line">
     Qualify leads based on company size and growth trajectory
   </Card>
   
-  <Card title="Investment Research" icon="trending-up">
+  <Card title="Investment Research" icon="chart-bar">
     Analyze growth patterns for investment due diligence
   </Card>
   
