--- a/api-reference/company/search.mdx
+++ b/api-reference/company/search.mdx
@@ -951,7 +951,7 @@ const californiaSaas = await exportMarketSegment({
     Analyze market segments, competitor landscapes, and industry trends
   </Card>
   
-  <Card title="Investment Pipeline" icon="trending-up">
+  <Card title="Investment Pipeline" icon="chart-line">
     Identify investment opportunities across different funding stages
   </Card>
   
