--- a/api-reference/people/lookup-email.mdx
+++ b/api-reference/people/lookup-email.mdx
@@ -268,7 +268,7 @@ Email reverse lookup uses 1 credit per request. Unlike other people endpoints, t
     Verify and validate email addresses in your database
   </Card>
   
-  <Card title="Lead Qualification" icon="target">
+  <Card title="Lead Qualification" icon="bullseye">
     Research prospects from email campaigns before outreach
   </Card>
   
