--- a/api-reference/people/lookup.mdx
+++ b/api-reference/people/lookup.mdx
@@ -339,7 +339,7 @@ print_r($data);
 ## Use Cases
 
 <CardGroup cols={2}>
-  <Card title="Lead Generation" icon="target">
+  <Card title="Lead Generation" icon="bullseye">
     Find contact information for prospects when you only know their name and company
   </Card>
   
