--- a/api-reference/people/profile.mdx
+++ b/api-reference/people/profile.mdx
@@ -305,7 +305,7 @@ print_r($data);
     Enrich existing contact records with verified profile information
   </Card>
   
-  <Card title="Lead Qualification" icon="target">
+  <Card title="Lead Qualification" icon="bullseye">
     Research prospects before outreach to personalize messaging
   </Card>
   
